# btc_research

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ROADMAP.md  STRATEGY_IMPROVEMENTS_SUMMARY.md  STRATEGY_TEST_RESULTS.md  TECH_SPEC.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  strategy_analysis.py  test-flask-setup.sh  test_registration.py
.github/workflows/: ci.yml
btc_research/: __init__.py
btc_research/analysis/: __init__.py  gate_instrumentation.py
btc_research/api/: __init__.py  cache.py  config.py  data_access.py  dependencies.py  main.py  middleware.py  models.py  performance.py  strategy_manager.py
btc_research/cli/: __init__.py  backtest.py  download.py  optimise.py  visualize.py
btc_research/config/: adx-test.yaml  bear-market-optimized-vp.yaml  demo.yaml  enhanced-optimization.yaml  equity-protection-demo.yaml  fvg-strategy-focused.yaml  fvg-strategy.yaml  improved-volume-profile-v1.yaml  improved-vp-fvg-simple.yaml  improved-working-conservative.yaml  improved-working-v1.yaml  improved-working-v2.yaml  mega-high-freq-test.yaml  multi-timeframe-vp-enhanced.yaml  risk-based-position-sizing.yaml  risk-improved-only.yaml  simple-fvg.yaml  simple-rsi.yaml  volume-profile-breakout.yaml  vp-orderblock-simple.yaml  vpfvg-confluence.yaml  vpfvg-mvp.yaml
btc_research/core/: __init__.py  backtester.py  base_indicator.py  datafeed.py  engine.py  equity_protection.py  position_sizing.py  registry.py  schema.py
btc_research/indicators/: __init__.py  adx.py  ema.py  fvg.py  risk_management.py  rsi.py  volume_profile.py  vpfvg_signal.py
btc_research/live/: __init__.py  paper_trader.py  strategy_runner.py  stream_manager.py
btc_research/optimization/: __init__.py  base.py  cli_integration.py  integration.py  types.py  visualization.py
btc_research/utils/: equity_protection_integration.py
btc_research/visual_testing/: __init__.py
btc_research/web/: __init__.py  __main__.py  app.py
config/: nginx-prod.conf  redis-prod.conf  redis.conf
docs/: ADX_IMPLEMENTATION_SUMMARY.md  VPFVG_SIGNAL_DOCUMENTATION.md  VP_IMPLEMENTATION_DOCUMENTATION.md  implementation.md  plan.md  progress.md
docs/api/: README.md
docs/examples/: basic_optimization.py
examples/: adx_demo.py  enhanced_monte_carlo_robustness_demo.py  equity_protection_demo.py  fvg_optimization_example.py  position_sizing_demo.py  robustness_testing_demo.py  validation_framework_demo.py  vpfvg_demo.py
monitoring/: prometheus-prod.yml  prometheus.yml
scripts/: backup.sh  install.sh  validate_vpfvg_metrics.py
sql/: init-prod.sql  init.sql
tests/: __init__.py  test_adx.py  test_backtester.py  test_base_indicator.py  test_cli.py  test_cli_tools.py  test_comprehensive_vpfvg_integration.py  test_datafeed.py  test_engine.py  test_equity_protection.py  test_fvg_vp_confluence.py  test_indicators.py  test_integration.py  test_performance.py  test_position_sizing.py  test_registry.py  test_schema.py  test_specific_confluence_scenarios.py  test_statistics_endpoints.py  test_strategy_runner.py  test_visual_testing.py  test_volume_profile.py  test_volume_profile_summary.md  test_vpfvg_integration.py  test_vpfvg_signal.py
(+84 files in other folders)
